fix: (client) rendering TimetableContainer in Full width. Spacing is done by outer container

--- a/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
+++ b/client/src/components/Timetable/TimetableContainer/TimetableContainer.module.css
@@ -1,11 +1,9 @@
 .TimetableContainer {
   box-sizing: border-box;
   margin: auto;
-  width: 90%;
+  width: 100%;
   height: 100%;
   padding-bottom: 15px;
   display: grid;
-  /* grid-template-rows: 12fr 1fr; */
-
 }
 
